style: update list at Mongodb manager test
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>